testsuite/tests/typecheck/should_fail/all.T

test('tcfail001', normal, compile_fail, [''])
test('tcfail002', normal, compile_fail, [''])
